welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:16: error: value % is not a member of java.awt.Color
      setCouleurBrosse(T((j+decalage))%x)
                                      ^